src/contrib/SignalSource/NIDAQ/nidaq/nidaq.h

typedef char i8;
typedef unsigned char u8;
typedef short i16;
typedef unsigned short u16;
typedef long i32;
typedef unsigned long u32;
typedef float f32;
typedef double f64;
extern i16 WINAPI Query_Optimizations_GFS (
	i16        device);
extern i16 WINAPI DIG_In_Port_GFS (
	i16        slot,
	i16        port,
	i16        FAR * pattern);
extern i16 WINAPI DIG_In_Port (
	i16        slot,
	i16        port,
	i16        FAR * pattern);
extern i16 WINAPI DIG_Line_Config (
	i16        slot,
	i16        port,
	i16        linenum,
	i16        direction);
extern i16 WINAPI DIG_Out_Grp (
	i16        slot,
	i16        grp,
	i16        grp_pat);
extern i16 WINAPI DIG_Out_Line (
	i16        slot,
	i16        port,
	i16        linenum,
	i16        state);
extern i16 WINAPI DIG_Out_Port_GFS (
	i16        slot,
	i16        port,
	i16        pattern);
extern i16 WINAPI DIG_Out_Port (
	i16        slot,
	i16        port,
	i16        pattern);
extern i16 WINAPI DIG_Prt_Config (
	i16        slot,
	i16        port,
	i16        latch_mode,
	i16        direction);
extern i16 WINAPI DIG_Prt_Status (
	i16        slot,
	i16        port,
	i16        FAR * status);
extern i16 WINAPI DIG_SCAN_Setup (
	i16        slot,
	i16        grp,
	i16        numPorts,
	i16        FAR * portList,
	i16        direction);
extern i16 WINAPI Get_DAQ_Device_Info (
	i16        deviceNumber,
	u32        infoType,
	u32        FAR * infoVal);
extern i16 WINAPI Get_NI_DAQ_Version (
	u32        FAR * version);
extern i16 WINAPI GPCTR_Config_Buffer (
	i16        deviceNumber,
	u32        gpCounterNumber,
	u32        reserved,
	u32        numPoints,
	u32        FAR * buffer);
extern i16 WINAPI GPCTR_Read_Buffer (
	i16        deviceNumber,
	u32        gpCounterNumber,
	u32        readMode,
	i32        readOffset,
	u32        numPointsToRead,
	f64        timeOut,
	u32        FAR * numPointsRead,
	u32        FAR * buffer);
extern i16 WINAPI Line_Change_Attribute (
	i16        deviceNumber,
	u32        lineNumber,
	u32        attribID,
	u32        attribValue);
extern i16 WINAPI GPCTR_Control (
	i16        deviceNumber,
	u32        gpCounterNumber,
	u32        action);
extern i16 WINAPI GPCTR_Set_Application (
	i16        deviceNumber,
	u32        gpCounterNumber,
	u32        application);
extern i16 WINAPI GPCTR_Watch (
	i16        deviceNumber,
	u32        gpCounterNumber,
	u32        watchID,
	u32        FAR * watchValue);
extern i16 WINAPI ICTR_Read (
	i16        slot,
	i16        counter,
	u16        FAR * cnt);
extern i16 WINAPI ICTR_Reset (
	i16        slot,
	i16        counter,
	i16        state);
extern i16 WINAPI ICTR_Setup (
	i16        slot,
	i16        counter,
	i16        mode,
	u16        cnt,
	i16        binBCD);
extern i16 WINAPI Init_DA_Brds (
	i16        slot,
	i16        FAR * brdCode);
extern i16 WINAPI Lab_ISCAN_Check (
	i16        slot,
	i16        FAR * status,
	u32        FAR * retrieved,
	i16        FAR * finalScanOrder);
extern i16 WINAPI Lab_ISCAN_Op (
	i16        slot,
	i16        numChans,
	i16        gain,
	i16        FAR * buffer,
	u32        cnt,
	f64        sampleRate,
	f64        scanRate,
	i16        FAR * finalScanOrder);
extern i16 WINAPI Lab_ISCAN_Start (
	i16        slot,
	i16        numChans,
	i16        gain,
	i16        FAR * buffer,
	u32        cnt,
	i16        timebase,
	u16        sampleInt,
	u16        scanInt);
extern i16 WINAPI Lab_ISCAN_to_Disk (
	i16        slot,
	i16        numChans,
	i16        gain,
	i8         FAR * fileName,
	u32        cnt,
	f64        sampleRate,
	f64        scanRate,
	i16        concat);
extern i16 WINAPI LPM16_Calibrate (
	i16        slot);
extern i16 WINAPI MIO_Config (
	i16        slot,
	i16        dither,
	i16        useAMUX);
extern i16 WINAPI RTSI_Clear (
	i16        slot);
extern i16 WINAPI RTSI_Clock (
	i16        slot,
	i16        connect,
	i16        direction);
extern i16 WINAPI RTSI_Conn (
	i16        slot,
	i16        brdSignal,
	i16        busLine,
	i16        direction);
extern i16 WINAPI RTSI_DisConn (
	i16        slot,
	i16        brdSignal,
	i16        busLine);
extern i16 WINAPI SC_2040_Config (
	i16        deviceNumber,
	i16        channel,
	i16        sc2040Gain);
extern i16 WINAPI SCAN_Demux (
	i16        FAR * buffer,
	u32        cnt,
	i16        numChans,
	i16        muxMode);
extern i16 WINAPI SCAN_Op (
	i16        slot,
	i16        numChans,
	i16        FAR * chans,
	i16        FAR * gains,
	i16        FAR * buffer,
	u32        cnt,
	f64        sampleRate,
	f64        scanRate);
extern i16 WINAPI SCAN_Sequence_Demux (
	i16        numChans,
	i16        FAR * chanVector,
	u32        bufferSize,
	i16        FAR * buffer,
	i16        samplesPerSequence,
	i16        FAR * scanSequenceVector,
	u32        FAR * samplesPerChanVector);
extern i16 WINAPI SCAN_Sequence_Retrieve (
	i16        deviceNumber,
	i16        samplesPerSequence,
	i16        FAR * scanSequenceVector);
extern i16 WINAPI SCAN_Sequence_Setup (
	i16        deviceNumber,
	i16        numChans,
	i16        FAR * chanVector,
	i16        FAR * gainVector,
	i16        FAR * scanRateDivVector,
	i16        FAR * scansPerSequence,
	i16        FAR * samplesPerSequence);
extern i16 WINAPI SCAN_Setup (
	i16        slot,
	i16        num_chans,
	i16        FAR * chans,
	i16        FAR * gains);
extern i16 WINAPI SCAN_Start (
	i16        slot,
	i16        FAR * buffer,
	u32        cnt,
	i16        tb1,
	u16        si1,
	i16        tb2,
	u16        si2);
extern i16 WINAPI SCAN_to_Disk (
	i16        slot,
	i16        numChans,
	i16        FAR * chans,
	i16        FAR * gains,
	i8         FAR * fileName,
	u32        cnt,
	f64        sampleRate,
	f64        scanRate,
	i16        concat);
extern i16 WINAPI Calibrate_1200 (
	i16        deviceNumber,
	i16        calOP,
	i16        saveNewCal,
	i16        EEPROMloc,
	i16        calRefChan,
	i16        grndRefChan,
	i16        DAC0chan,
	i16        DAC1chan,
	f64        calRefVolts,
	f64        gain);
extern i16 WINAPI SCXI_AO_Write (
	i16        chassisID,
	i16        moduleSlot,
	i16        DACchannel,
	i16        opCode,
	i16        rangeCode,
	f64        voltCurrentData,
	i16        binaryDat,
	i16        FAR * binaryWritten);
extern i16 WINAPI SCXI_Cal_Constants (
	i16        chassisID,
	i16        moduleSlot,
	i16        SCXIchannel,
	i16        operation,
	i16        calArea,
	i16        rangeCode,
	f64        SCXIgain,
	i16        DAQdevice,
	i16        DAQchannel,
	i16        DAQgain,
	f64        TBgain,
	f64        volt1,
	f64        binary1,
	f64        volt2,
	f64        binary2,
	f64        FAR * binEEprom1,
	f64        FAR * binEEprom2);
extern i16 WINAPI InitChannelWizardStrainCal (
	i16        chassisID,
	i16        moduleSlot,
	i16        moduleChan,
	i16        device,
	f32        loLim,
	f32        hiLim,
	f64        FAR * moduleGain,
	i16        FAR * DAQgain,
	i16        FAR * DAQchan,
	f32        excitation,
	i16        connectionType);
extern i16 WINAPI ChannelWizardSCXIStrainCal (
	i16        chassisID,
	i16        moduleSlot,
	i16        moduleChan,
	i16        device,
	i16        DAQchan,
	f64        moduleGain,
	i16        DAQgain,
	u8         engageShuntA,
	u8         engageShuntB,
	f64        FAR * voltage,
	f64        FAR * pos_excitation,
	f64        FAR * neg_excitation);
extern i16 WINAPI SCXI_1520_Transducer_Cal (
	i16        chassisID,
	i16        moduleSlot,
	i16        moduleChan,
	f64        SCXIgain,
	i16        DAQdevice,
	i16        DAQchan);
extern i16 WINAPI SCXI_Calibrate (
	i16        chassisID,
	i16        moduleSlot,
	i16        moduleChan,
	i16        operation,
	i16        calArea,
	f64        SCXIgain,
	f64        inputRefVoltage,
	i16        DAQdevice,
	i16        DAQchan);
extern i16 WINAPI SCXI_Strain_Null (
	i16        chassisID,
	i16        slot,
	i16        moduleChan,
	i16        device,
	i16        DAQchan,
	f32        FAR * imbalances);
extern i16 WINAPI SCXI_Strain_Null_Ex (
	i16        chassisID,
	i16        slot,
	i16        moduleChan,
	i16        device,
	i16        DAQchan,
	f32        FAR * imbalances,
	f32        excitation,
	u32        bridgeType,
	i16        FAR * finePot,
	i16        FAR * coarsePot);
extern i16 WINAPI SCXI_Calibrate_Setup (
	i16        chassisID,
	i16        moduleSlot,
	i16        calOp);
/* Obsolete Functions */


extern i16 WINAPI Get_DAQ_Event (
	u32        timeOut,
	i16        FAR * handle,
	i16        FAR * msg,
	i16        FAR * wParam,
	i32        FAR * lParam);
extern i16 WINAPI Peek_DAQ_Event (
	u32        timeOut,
	i16        FAR * handle,
	i16        FAR * msg,
	i16        FAR * wParam,
	i32        FAR * lParam);
extern i16 WINAPI REG_Level_Read (
	i16        slot,
	i16        registerIndex,
	u32        FAR * registerValue);
extern i16 WINAPI REG_Level_Write (
	i16        slot,
	i16        registerIndex,
	u32        bitsAffected,
	u32        bitSettings,
	u32        FAR * registerValue);