src/contrib/SignalSource/NIDAQ/nidaq/nidaq.pas

	state:                pi16
	):nidaqStatus; stdcall; external nidaqdll;
function Query_Optimizations_GFS (
	device:               i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_In_Port_GFS (
	slot:                 i16;
	port:                 i16;
	pattern:              pi16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_In_Port (
	slot:                 i16;
	port:                 i16;
	pattern:              pi16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Line_Config (
	slot:                 i16;
	port:                 i16;
	linenum:              i16;
	direction:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Out_Grp (
	slot:                 i16;
	grp:                  i16;
	grp_pat:              i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Out_Line (
	slot:                 i16;
	port:                 i16;
	linenum:              i16;
	state:                i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Out_Port_GFS (
	slot:                 i16;
	port:                 i16;
	pattern:              i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Out_Port (
	slot:                 i16;
	port:                 i16;
	pattern:              i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Prt_Config (
	slot:                 i16;
	port:                 i16;
	latch_mode:           i16;
	direction:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Prt_Status (
	slot:                 i16;
	port:                 i16;
	status:               pi16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_SCAN_Setup (
	slot:                 i16;
	grp:                  i16;
	numPorts:             i16;
	portList:             pi16;
	direction:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function Get_DAQ_Device_Info (
	deviceNumber:         i16;
	infoType:             u32;
	infoVal:              pu32
	):nidaqStatus; stdcall; external nidaqdll;
function Get_DAQ_Event (
	timeOut:              u32;
	handle:               pi16;
	msg:                  pi16;
	wParam:               pi16;
	lParam:               pi32
	):nidaqStatus; stdcall; external nidaqdll;
function Get_NI_DAQ_Version (
	version:              pu32
	):nidaqStatus; stdcall; external nidaqdll;
function GPCTR_Config_Buffer (
	deviceNumber:         i16;
	gpCounterNumber:      u32;
	reserved:             u32;
	numPoints:            u32;
	buffer:               pu32
	):nidaqStatus; stdcall; external nidaqdll;
function GPCTR_Read_Buffer (
	deviceNumber:         i16;
	gpCounterNumber:      u32;
	readMode:             u32;
	readOffset:           i32;
	numPointsToRead:      u32;
	timeOut:              f64;
	numPointsRead:        pu32;
	buffer:               pu32
	):nidaqStatus; stdcall; external nidaqdll;
function Line_Change_Attribute (
	deviceNumber:         i16;
	lineNumber:           u32;
	attribID:             u32;
	attribValue:          u32
	):nidaqStatus; stdcall; external nidaqdll;
function GPCTR_Control (
	deviceNumber:         i16;
	gpCounterNumber:      u32;
	action:               u32
	):nidaqStatus; stdcall; external nidaqdll;
function GPCTR_Set_Application (
	deviceNumber:         i16;
	gpCounterNumber:      u32;
	application:          u32
	):nidaqStatus; stdcall; external nidaqdll;
function GPCTR_Watch (
	deviceNumber:         i16;
	gpCounterNumber:      u32;
	watchID:              u32;
	watchValue:           pu32
	):nidaqStatus; stdcall; external nidaqdll;
function ICTR_Read (
	slot:                 i16;
	counter:              i16;
	cnt:                  pu16
	):nidaqStatus; stdcall; external nidaqdll;
function ICTR_Reset (
	slot:                 i16;
	counter:              i16;
	state:                i16
	):nidaqStatus; stdcall; external nidaqdll;
function ICTR_Setup (
	slot:                 i16;
	counter:              i16;
	mode:                 i16;
	cnt:                  u16;
	binBCD:               i16
	):nidaqStatus; stdcall; external nidaqdll;
function Init_DA_Brds (
	slot:                 i16;
	brdCode:              pi16
	):nidaqStatus; stdcall; external nidaqdll;
function Lab_ISCAN_Check (
	slot:                 i16;
	status:               pi16;
	retrieved:            pu32;
	finalScanOrder:       pi16
	):nidaqStatus; stdcall; external nidaqdll;
function Lab_ISCAN_Op (
	slot:                 i16;
	numChans:             i16;
	gain:                 i16;
	buffer:               pi16;
	cnt:                  u32;
	sampleRate:           f64;
	scanRate:             f64;
	finalScanOrder:       pi16
	):nidaqStatus; stdcall; external nidaqdll;
function Lab_ISCAN_Start (
	slot:                 i16;
	numChans:             i16;
	gain:                 i16;
	buffer:               pi16;
	cnt:                  u32;
	timebase:             i16;
	sampleInt:            u16;
	scanInt:              u16
	):nidaqStatus; stdcall; external nidaqdll;
function Lab_ISCAN_to_Disk (
	slot:                 i16;
	numChans:             i16;
	gain:                 i16;
	fileName:             pi8;
	cnt:                  u32;
	sampleRate:           f64;
	scanRate:             f64;
	concat:               i16
	):nidaqStatus; stdcall; external nidaqdll;
function LPM16_Calibrate (
	slot:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function MIO_Config (
	slot:                 i16;
	dither:               i16;
	useAMUX:              i16
	):nidaqStatus; stdcall; external nidaqdll;
function Peek_DAQ_Event (
	timeOut:              u32;
	handle:               pi16;
	msg:                  pi16;
	wParam:               pi16;
	lParam:               pi32
	):nidaqStatus; stdcall; external nidaqdll;
function REG_Level_Read (
	slot:                 i16;
	registerIndex:        i16;
	registerValue:        pu32
	):nidaqStatus; stdcall; external nidaqdll;
function REG_Level_Write (
	slot:                 i16;
	registerIndex:        i16;
	bitsAffected:         u32;
	bitSettings:          u32;
	registerValue:        pu32
	):nidaqStatus; stdcall; external nidaqdll;
function RTSI_Clear (
	slot:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function RTSI_Clock (
	slot:                 i16;
	connect:              i16;
	direction:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function RTSI_Conn (
	slot:                 i16;
	brdSignal:            i16;
	busLine:              i16;
	direction:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function RTSI_DisConn (
	slot:                 i16;
	brdSignal:            i16;
	busLine:              i16
	):nidaqStatus; stdcall; external nidaqdll;
function SC_2040_Config (
	deviceNumber:         i16;
	channel:              i16;
	sc2040Gain:           i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCAN_Demux (
	buffer:               pi16;
	cnt:                  u32;
	numChans:             i16;
	muxMode:              i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCAN_Op (
	slot:                 i16;
	numChans:             i16;
	chans:                pi16;
	gains:                pi16;
	buffer:               pi16;
	cnt:                  u32;
	sampleRate:           f64;
	scanRate:             f64
	):nidaqStatus; stdcall; external nidaqdll;
function SCAN_Sequence_Demux (
	numChans:             i16;
	chanVector:           pi16;
	bufferSize:           u32;
	buffer:               pi16;
	samplesPerSequence:   i16;
	scanSequenceVector:   pi16;
	samplesPerChanVector: pu32
	):nidaqStatus; stdcall; external nidaqdll;
function SCAN_Sequence_Retrieve (
	deviceNumber:         i16;
	samplesPerSequence:   i16;
	scanSequenceVector:   pi16
	):nidaqStatus; stdcall; external nidaqdll;
function SCAN_Sequence_Setup (
	deviceNumber:         i16;
	numChans:             i16;
	chanVector:           pi16;
	gainVector:           pi16;
	scanRateDivVector:    pi16;
	scansPerSequence:     pi16;
	samplesPerSequence:   pi16
	):nidaqStatus; stdcall; external nidaqdll;
function SCAN_Setup (
	slot:                 i16;
	num_chans:            i16;
	chans:                pi16;
	gains:                pi16
	):nidaqStatus; stdcall; external nidaqdll;
function SCAN_Start (
	slot:                 i16;
	buffer:               pi16;
	cnt:                  u32;
	tb1:                  i16;
	si1:                  u16;
	tb2:                  i16;
	si2:                  u16
	):nidaqStatus; stdcall; external nidaqdll;
function SCAN_to_Disk (
	slot:                 i16;
	numChans:             i16;
	chans:                pi16;
	gains:                pi16;
	fileName:             pi8;
	cnt:                  u32;
	sampleRate:           f64;
	scanRate:             f64;
	concat:               i16
	):nidaqStatus; stdcall; external nidaqdll;
function Calibrate_1200 (
	deviceNumber:         i16;
	calOP:                i16;
	saveNewCal:           i16;
	EEPROMloc:            i16;
	calRefChan:           i16;
	grndRefChan:          i16;
	DAC0chan:             i16;
	DAC1chan:             i16;
	calRefVolts:          f64;
	gain:                 f64
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_AO_Write (
	chassisID:            i16;
	moduleSlot:           i16;
	DACchannel:           i16;
	opCode:               i16;
	rangeCode:            i16;
	voltCurrentData:      f64;
	binaryDat:            i16;
	binaryWritten:        pi16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Cal_Constants (
	chassisID:            i16;
	moduleSlot:           i16;
	SCXIchannel:          i16;
	operation:            i16;
	calArea:              i16;
	rangeCode:            i16;
	SCXIgain:             f64;
	DAQdevice:            i16;
	DAQchannel:           i16;
	DAQgain:              i16;
	TBgain:               f64;
	volt1:                f64;
	binary1:              f64;
	volt2:                f64;
	binary2:              f64;
	binEEprom1:           pf64;
	binEEprom2:           pf64
	):nidaqStatus; stdcall; external nidaqdll;
function InitChannelWizardStrainCal (
	chassisID:            i16;
	moduleSlot:           i16;
	moduleChan:           i16;
	device:               i16;
	loLim:                f32;
	hiLim:                f32;
	moduleGain:           pf64;
	DAQgain:              pi16;
	DAQchan:              pi16;
	excitation:           f32;
	connectionType:       i16
	):nidaqStatus; stdcall; external nidaqdll;
function ChannelWizardSCXIStrainCal (
	chassisID:            i16;
	moduleSlot:           i16;
	moduleChan:           i16;
	device:               i16;
	DAQchan:              i16;
	moduleGain:           f64;
	DAQgain:              i16;
	engageShuntA:         u8;
	engageShuntB:         u8;
	voltage:              pf64;
	pos_excitation:       pf64;
	neg_excitation:       pf64
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_1520_Transducer_Cal (
	chassisID:            i16;
	moduleSlot:           i16;
	moduleChan:           i16;
	SCXIgain:             f64;
	DAQdevice:            i16;
	DAQchan:              i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Calibrate (
	chassisID:            i16;
	moduleSlot:           i16;
	moduleChan:           i16;
	operation:            i16;
	calArea:              i16;
	SCXIgain:             f64;
	inputRefVoltage:      f64;
	DAQdevice:            i16;
	DAQchan:              i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Strain_Null (
	chassisID:            i16;
	slot:                 i16;
	moduleChan:           i16;
	device:               i16;
	DAQchan:              i16;
	imbalances:           pf32
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Strain_Null_Ex (
	chassisID:            i16;
	slot:                 i16;
	moduleChan:           i16;
	device:               i16;
	DAQchan:              i16;
	imbalances:           pf32;
	excitation:           f32;
	bridgeType:           u32;
	finePot:              pi16;
	coarsePot:            pi16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Calibrate_Setup (
	chassisID:            i16;
	moduleSlot:           i16;
